@startuml Class Diagram
title Diagrama de Clases - Buscador y Notificador de Empleos (scripts-backend)

package "Presentation" {
    class main {
        + app : FastAPI
        --
        + root() : dict
    }
    
    package "controllers" {
        class scripts_controller {
            + router : APIRouter
            + db : FirestoreClient
            --
            + run_job_finder() : dict
        }
    }
}

package "Domain" {
    package "entities" {
        class Job {
            + cargo : str
            + url : str
            + entidad : str
            + region : str
            + ciudad : str
            + updated_at : datetime
            --
            + doc_id : str
        }
    }

    package "usecases" {
        class RunKineJobFinderUseCase {
            - job_repository : JobRepository
            - email_service : EmailService
            --
            + execute() : void
            - _filter_jobs(jobs: list[dict], pattern: Pattern) : list[Job]
            - _is_in_santiago_province(region: str, city: str) : bool
        }

        class RunMatronJobFinderUseCase {
            - job_repository : JobRepository
            - email_service : EmailService
            --
            + execute() : void
            - _filter_jobs(jobs: list[dict], pattern: Pattern) : list[Job]
            - _is_in_santiago_province(region: str, city: str) : bool
        }

        class CleanupInactiveJobsUseCase {
            - job_repository : JobRepository
            --
            + execute() : void
        }
    }
    
    package "repositories" {
        interface JobRepository {
            --
            + get_sent_job_by_url(url: str) : bool
            + save_job(job: Job) : void
            + fetch_all_sent_jobs() : list[Job]
            + delete_job_by_url(url: str) : void
        }
        
        interface JobDataSource {
            --
            + fetch_all_active_jobs() : list[dict]
            + filter_jobs(items: list[dict], pattern: Pattern) : list[Job]
        }
    }
    
    package "services" {
        interface EmailService {
            --
            + __enter__() : EmailService
            + __exit__(exc_type, exc_val, exc_tb) : void
            + send_email(recipients: list[str], subject: str, body: str) : bool
            + get_sender_email() : str
        }
    }
    
    package "exceptions" {
        class DomainException {
            + message : str
            + status_code : int
        }
        class PortalConnectionError {
        }
        class DatabaseOperationError {
        }
        class EmailDispatchError {
        }
        
        PortalConnectionError --|> DomainException
        DatabaseOperationError --|> DomainException
        EmailDispatchError --|> DomainException
    }
}

package "Data" {
    package "data.repositories" {
        class FirestoreJobRepository {
            - db : FirestoreClient
            --
            + get_sent_job_by_url(url: str) : bool
            + save_job(job: Job) : void
            + fetch_all_sent_jobs() : list[Job]
            + delete_job_by_url(url: str) : void
        }
    }
    
    package "data.services" {
        class GmailEmailService {
            - email_user : str
            - email_pass : str
            - server : SMTP
            --
            + __enter__() : GmailEmailService
            + __exit__(exc_type, exc_val, exc_tb) : void
            + send_email(recipients: list[str], subject: str, body: str) : bool
            + get_sender_email() : str
        }
    }
    
    package "data.network" {
        class PortalClient {
            --
            + is_in_santiago_province(region: str, city: str) : bool
            + fetch_all_active_jobs() : list[dict]
            + filter_jobs(items: list[dict], pattern: Pattern) : list[Job]
        }
    }
}

package "Infrastructure" {
    class config {
        + JOBS_PORTAL_URL : str
        + PORTAL_HEADERS : dict
        + KINE_PATTERN : Pattern
        + MATRON_PATTERN : Pattern
        + KINE_RECIPIENTS : list[str]
        + MATRON_RECIPIENTS : list[str]
        + SANTIAGO_PROVINCE_COMMUNES : set[str]
    }
    
    class middleware {
        --
        + register_logging_middleware(app: FastAPI) : void
        + verify_security_from_google_cloud_scheduler_task(request: Request) : void
     }
     
     class dependencies {
         + db_client : FirestoreClient
         --
         + get_db() : FirestoreClient
         + get_job_repository(db) : FirestoreJobRepository
         + get_email_service() : GmailEmailService
         + get_run_kine_job_finder_usecase(repository, email_service) : RunKineJobFinderUseCase
         + get_run_matron_job_finder_usecase(repository, email_service) : RunMatronJobFinderUseCase
         + get_cleanup_inactive_jobs_usecase(repository) : CleanupInactiveJobsUseCase
     }
}

main --> scripts_controller : "registra"
main ..> middleware : "registra logs"
scripts_controller ..> middleware : "usa verify_security"
scripts_controller ..> RunKineJobFinderUseCase : "ejecuta"
scripts_controller ..> RunMatronJobFinderUseCase : "ejecuta"
scripts_controller ..> CleanupInactiveJobsUseCase : "ejecuta"
scripts_controller ..> dependencies : "usa Depends"

dependencies ..> FirestoreJobRepository : "instancia"
dependencies ..> GmailEmailService : "instancia"
dependencies ..> PortalClient : "instancia"
dependencies ..> RunKineJobFinderUseCase : "instancia"
dependencies ..> RunMatronJobFinderUseCase : "instancia"
dependencies ..> CleanupInactiveJobsUseCase : "instancia"

RunKineJobFinderUseCase --> JobRepository : "usa"
RunKineJobFinderUseCase --> EmailService : "usa"

RunMatronJobFinderUseCase --> JobRepository : "usa"
RunMatronJobFinderUseCase --> EmailService : "usa"

CleanupInactiveJobsUseCase --> JobRepository : "usa"

FirestoreJobRepository ..|> JobRepository : "implementa"
GmailEmailService ..|> EmailService : "implementa"
PortalClient ..|> JobDataSource : "implementa"

RunKineJobFinderUseCase ..> config : "lee constantes"
RunMatronJobFinderUseCase ..> config : "lee constantes"
PortalClient ..> config : "lee constantes"

JobRepository ..> Job : "usa"
JobDataSource ..> Job : "usa"
PortalClient ..> Job : "crea"
FirestoreJobRepository ..> Job : "usa"
RunKineJobFinderUseCase ..> Job : "usa"
RunMatronJobFinderUseCase ..> Job : "usa"

@enduml
